Fixed education sizing issue. Scroll not working on Mobile atm

--- a/src/education/education.scss
+++ b/src/education/education.scss
@@ -16,6 +16,7 @@
 	@media screen and (max-width: $phone) {
 		top: 45%;
 		min-width: 95%;
+		min-height: 550px;
 		max-height: 65%;
 	}
 
@@ -29,7 +30,8 @@
 		background-color: #c0c6ca;
 
 		@media screen and (max-width: $phone) {
-			max-height: 700px;
+			min-height: 500px;
+			max-height: 550px;
 		}
 
 		.title-bar {
@@ -107,11 +109,10 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			overflow-y: scroll;
 
 			@media screen and (max-width: $phone) {
-				height: 680px;
-				overflow-y: auto;
+				min-height: 530px;
+				max-height: 886px;
 			}
 
 			.school-list {
@@ -124,9 +125,8 @@
 
 				@media screen and (max-width: $phone) {
 					width: 95%;
-					height: 100%;
-					justify-content: flex-start;
-					overflow-y: auto;
+					height: 886px;
+					overflow-y: scroll;
 				}
 
 				.school-item {
@@ -142,7 +142,6 @@
 					@media screen and (max-width: $phone) {
 						display: flex;
 						flex-direction: column;
-						height: fit-content;
 						margin: 10px 0;
 						flex-shrink: 0;
 					}
