--- a/src/javascriptWindow/javascriptwindow.scss
+++ b/src/javascriptWindow/javascriptwindow.scss
@@ -134,6 +134,7 @@
 
 			@media screen and (max-width: $phone) {
 				height: 100%;
+				overflow-y: scroll;
 			}
 
 			.link-container {
@@ -144,9 +145,8 @@
 				align-items: center;
 
 				@media screen and (max-width: $phone) {
-					min-height: 600px;
+					height: 600px;
 					flex-direction: column;
-					overflow-y: scroll;
 				}
 
 				.link-item {
